  discrimSim, rescale, psyfun, psyinv, psyderiv, betabin.

October 30. 2012: version 1.2-18:

- power functions singled out in R/power.R
- minor adjustments to print.discrim

March 15. 2013: version 1.2-19:

- Major update of power and sample size computations for the binomial
  methods. Now stable exact sample sizes and continuity adjusted
  normal approximate sample sizes are provided.
- print.discrim now says that the p-value is one-sided and that the
  confidence interval is two-sided.

July 24. 2013: version 1.2-20:

- Documentation bug reported by Mike Allerhand (2013-07-09) in SDT
  fixed.

September 5. 2013: version 1.2-22:

- Adding support for ANOVA-type tests of d-primes using the functions
  dprime_compare, dprime_test, dprime_table and
  posthoc.dprime_compare/posthoc.dprime_test.

September 10. 2013:

- updating various man-pages with 'tetrad' information and links.

October 1. 2013:

- Removing calls to '::' and ':::' in R codebase.
- Moving 'ordinal' from Depends to Suggests, 'numDeriv' from Depends
  to Imports, 'MASS' from Suggests to Imports.
- Adding ByteCompile: yes to Description file.
- Now using import(MASS) to fetch the confint.glm method from MASS and
  adding test for confing.anota to check that the right confint method
  is actually used.
- Deprecating function 'clls'.
- Using if(require(ordinal)) in examples, tests and vignettes where
  needed.
- Adding 'ordinal' to vignetteDepends for the twoACexamples vignette.
- Adding \dontshow{} tests to examples in .Rd files rather than having
  an .Rout.save file in ./tests/Examples to avoid problems with
  minor numerical differences across platforms and architectures.

October 20. 2013:

- Ensuring that the package will work under R-2.15.3 (and older?) by
  modifying tests in discrimSim.Rd and ./inst/tests/test-links.R.

May 7th 2014 (version 1.4-0):

- Implementing support for the Degree-of-Difference method: dod,
  dod_fit, dodSim, dodPwr, dodControl, optimal_tau.
