@@ -1,8 +1,8 @@
 Package: sensR
 Type: Package
 Title: Thurstonian models for sensory discrimination
-Version: 1.4-0
-Date: 2014-05-07
+Version: 1.4-1
+Date: 2014-06-25
 Authors@R: c(person(given="Rune Haubo Bojesen", family="Christensen",
 	   email="rhbc@dtu.dk", role=c("aut", "cre")),
 	   person(given="Per Bruun", family="Brockhoff",
